Fixed overflow

--- a/src/components/feed/Feed.css
+++ b/src/components/feed/Feed.css
@@ -1,7 +1,6 @@
 .Feed {
   width: 60rem;
   align-self: center;
-  overflow: scroll;
 }
 
 code {
